Closed Bug 724281 Opened 13 years ago Closed 13 years ago

suspend-02.svg fails randomly

Categories

(Core :: SVG, defect)

x86
Windows Vista
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla13

People

(Reporter: longsonr, Assigned: longsonr)

Details

Attachments

(1 file)

No description provided.
Assignee: nobody → longsonr
Attached patch patchSplinter Review
I had this in the original patch for bug 616892 but I forgot to include it in the eventual checked in version. The reftest changes make them fail consistently without the patch rather than randomly.
Attachment #594546 - Flags: review?(roc)
Flags: in-testsuite+
Target Milestone: --- → mozilla13
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: