Bug 724281 - suspend-02.svg fails randomly. r=roc